--- a/assignment2_Sebrina.ipynb
+++ b/assignment2_Sebrina.ipynb
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1095,23 +1095,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>3954.327021</td>\n",
+       "      <td>5019.64</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>4124.794375</td>\n",
+       "      <td>4964.35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3932.145000</td>\n",
+       "      <td>4503.31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4151.688958</td>\n",
+       "      <td>4764.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4326.685625</td>\n",
+       "      <td>4800.64</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1119,14 +1119,14 @@
       ],
       "text/plain": [
        "   TOTALDEMAND\n",
-       "0  3954.327021\n",
-       "1  4124.794375\n",
-       "2  3932.145000\n",
-       "3  4151.688958\n",
-       "4  4326.685625"
+       "0      5019.64\n",
+       "1      4964.35\n",
+       "2      4503.31\n",
+       "3      4764.18\n",
+       "4      4800.64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,24 +1192,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[6119.42895833],\n",
-       "        [4194.70625   ],\n",
-       "        [5209.57895833],\n",
-       "        [4324.87791667],\n",
-       "        [5593.54708333]]), array([[4103.98883042],\n",
-       "        [4666.31692655],\n",
-       "        [4914.13510429],\n",
-       "        [4897.18686529],\n",
-       "        [5150.94374332]]))"
+       "(array([[8196.83],\n",
+       "        [4994.78],\n",
+       "        [6564.7 ],\n",
+       "        [5705.47],\n",
+       "        [6769.89]]), array([[5106.33251152],\n",
+       "        [5820.57995664],\n",
+       "        [6124.23804073],\n",
+       "        [6102.20311019],\n",
+       "        [6401.78536979]]))"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1220,16 +1220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(363604.98872528505, -0.026921832859539307)"
+       "(844000.8317076277, -0.09576326983041783)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
